--- a/css/main.scss
+++ b/css/main.scss
@@ -25,12 +25,14 @@ $grey-color-dark:  darken($grey-color, 25%);
 // Colors
 $green-med: #72AD45;
 $brown: #73503D;
+$white: #FFF;
 
 // Width of the content area
 $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
+
 
 
 
